# ArkMusic

./: README.md  删除我build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
ark_music/: build-profile.json5  oh-package-lock.json5  oh-package.json5
ark_music/src/main/: module.json5
ark_music/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ark_music/src/main/cpp/types/libark_music/: oh-package.json5
ark_music/src/main/ets/ark_musicability/: Ark_musicAbility.ets
ark_music/src/main/ets/ark_musicbackupability/: Ark_musicBackupAbility.ets
ark_music/src/main/ets/pages/: Index.ets  files_manager.ets
ark_music/src/main/resources/base/element/: string.json
ark_music/src/main/resources/rawfile/create_gui/: index.html
ark_music/src/main/resources/rawfile/webview_gui/: index.html
ark_music/src/main/resources/rawfile/webview_gui/-old-/: index.html  test.html
ark_music/src/main/resources/rawfile/webview_gui/-old-/css/: album_display.css  back_btn.css  head.css  list.css  page.css  play_button.css  title.css  (+5 more)
ark_music/src/main/resources/rawfile/webview_gui/Page_/: index.html
ark_music/src/main/resources/rawfile/webview_gui/Page_Play/: index.html
ark_music/src/main/resources/rawfile/webview_gui/css/: main_gui.css  music_bar.css  taskbar.css
ark_music/src/main/resources/rawfile/webview_gui/file/: index.html
ark_music/src/main/resources/rawfile/webview_gui/js/: music_bar_playback.js  music_bar_title_scroll.js  set_meta.js  song_bar.js  taskbar.js
ark_music/src/mock/: mock-config.json5
ark_music/src/ohosTest/: module.json5
(+17 files in other folders)
